applications/services/observability/httproute-otel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel
  namespace: observability
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateway-system
      sectionName: https
  hostnames:
    - otel.tibor.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/traces
      backendRefs:
        - name: otel-collector-opentelemetry-collector
          port: 4319
